fix(category, product, page): add 404 error when pages not found, fix z-index on account label widget

--- a/src/widgets/AppHeader/ui/styles.scss
+++ b/src/widgets/AppHeader/ui/styles.scss
@@ -52,7 +52,7 @@
         position: absolute;
         top: -4px;
         right: -7px;
-        z-index: 100;
+        z-index: 10;
       }
     }
   }
